# vfree

./: .eslintrc.json  .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
config/: db.json  rspack.base.config.mjs  rspack.dev.config.mjs  rspack.prod.config.mjs
design/: AI模型生成.html  desktop.xcf  phone.xcf
doc/: tailwindcss.md
public/: index.html
src/: api.js  app.vue  env-d.ts  index.html  index.js  lib.rs  main.js  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/apis/: api.js  api.ts
src/assets/css/: defualt_theme.css  theme.css
src/components/layout/: Footer.vue  FooterV.vue  HeaderV.vue  MainV.vue  Mainer.vue  MenuV.vue  NavV.vue  header.vue  menu.vue
src/components/main/: ChatList.vue
src/components/modal/: MenuModal.vue  NewChatModal.vue
src/router/: index.ts
src/rsapi/: mod.rs
src/utils/: system.js  system.ts  tauri.invoke.js  tauri.invoke.ts
src/views/: ChatTalk.vue  HomeView.vue  TestV.vue
tests/: test.rs
