[package]
name = "vfree-web"
version = "0.1.0"
edition = "2024"
authors = ["xdsun777 <charmgo@qq.com>"]
description = "rust + rspack+vue3 mix template wasm package"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xdsun777/rust-rspack-template"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# tokio = { version = "1", features = ["full"] }
# reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen = "0.2.89"
console_error_panic_hook = { version = "0.1.7", optional = true }
